--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="your_underline_color">#FF1100</color>
+    <color name="checkbox_color">#6C66FF</color>
+    <color name="purple_blue">#647FFF</color>
+    <color name="white_with_82_alpha">#D1FFFFFF</color>
+    <color name="dialog_bg_color">#B3000000</color>
+
+    <color name="weakColor">#E05151</color>
+    <color name="fairColor">#E3A063</color>
+    <color name="goodColor">#647FFF</color>
+    <color name="strongColor">#91E2B7</color>
+    <color name="defaultColor">#80FFFFFF</color>
 </resources>
